fixed image resizing so no horizontal scrolling on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,6 +70,16 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         color: #F06292;
         font-size: 3.5rem;
     }
+
+    .hero-img {
+      max-width: 300px;
+    }
+}
+
+@media (max-width: 425px) {
+  .hero-img {
+    max-width: 275px;
+  }
 }
 
 .tracking-in-expand {
@@ -169,20 +179,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
   grid-gap: 2rem;
-  margin: 2rem;
-
-  .portfolio-card {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    height: 215px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 8px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-    transition: 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
-
-    .portfolio-card:hover {
-      box-shadow: 0 15px 30px rgbar(0, 0, 0, 0.5);
-    }
-  }
+  margin: 1rem;
+  padding-top: 20px;
 }
